name:                SnakeCube
version:             0.1.0.0
synopsis:            SnakeCube puzzle solver
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com

category:            Game, Math
build-type:          Simple
cabal-version:       >=1.10


executable SnakeCube
  main-is:              SnakeCube.hs
 
  ghc-options:          -O2 -funbox-strict-fields
                        -threaded -with-rtsopts=-N

  -- compiling with -O0 vs. -O2 greatly decreases the speed of the executable
  -- for a 4x4x4 cube on my machine, so using that flag is highly advised;
  -- also, parallelism adds some notable performance boost.

 
  build-depends:        base                    >=4.7   && <4.8,
                        parallel                >=3.2   && <4,
                        unordered-containers    >=0.2.4 && <0.3,
                        hashable                >=1.2   && <1.3

  default-language:     Haskell2010
